--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*Resolver problema de el boton en la nariz del gato en diseno responsive*/
+
 body {
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color:#FCF4EA;
     position: relative;
 }
 
@@ -53,35 +53,17 @@ body {
 .title {
     font-size: 4vmin;
     font-weight: normal;
+    color: #52493a;
 }
 
 .title .bold {
     font-weight: bold;
     font-size: 7vmin;
+    color: #0A0908;
+    ; ;
 }
 
 /* Media Queries */
-
-@media (max-width: 768px) {
-    .container {
-        grid-template-columns: repeat(6, 1fr); 
-        padding: 0 2vw;
-    }
-    
-    .cat-container {
-        grid-column: 1 / 7;
-    }
-
-    .title-container {
-        grid-column: 1 / 7;
-    }
-
-    .nose-button {
-        top: 48%; 
-        left: 42%; 
-        background-color: red;
-    }
-}
 
 @media (max-width: 480px) {
     .container {
@@ -106,10 +88,10 @@ body {
     }
 
     .nose-button {
-        top: 39%; 
+        top: 35%; 
         left: 82%; 
         width: 10vmin;
         height: 10vmin;
-        background-color: red;
+        background-color: transparent;
     }
 }
