--- a/assets/css/styleAbout.css
+++ b/assets/css/styleAbout.css
@@ -1,4 +1,3 @@
-/*Estilo no responsive*/
 /* Estilos generales */
 body {
     display: flex;
@@ -7,7 +6,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #FCF4EA !important;
 }
 
 /* Navbar */
@@ -39,7 +38,7 @@ body {
 }
 
 .nav-links a {
-    color: black; /* Cambiar color de fondo a transparente */
+    color: black; 
     text-decoration: none;
     font-size: 1.2rem;
 }
@@ -47,6 +46,7 @@ body {
 .nav-links a:hover {
     text-decoration: underline;
 }
+
 
 /* Hero Section */
 .hero-section {
@@ -81,6 +81,8 @@ body {
 
 .about-section h2 {
     font-size: 2.5rem;
+    color: #5e503f;
+    
 }
 
 .about-section p {
@@ -92,7 +94,7 @@ body {
     grid-column: 1 / 5;
     width: 50%;
     height: auto;
-    margin: 1rem auto; /* Centra horizontalmente la imagen */
+    margin: 1rem auto; 
 }
 
 
@@ -115,11 +117,12 @@ body {
 
 .story-section .mensaje-final{
     font-size: 2.5rem;
+    color: #5e503f;
 }
 
 /*footer*/
 .footer {
-    background-color: #f2f2f2; /* Cambia este color según lo que prefieras */
+    background-color: #c6ac8f; 
     padding: 20px;
     text-align: center;
     width: 100%;
@@ -128,9 +131,11 @@ body {
 }
 .footer h3 {
     margin-top: 0;
+    color: white;
 }
 .footer p {
     margin: 10px 0;
+    color: white;
 }
 .social-icons {
     display: flex;
@@ -141,15 +146,56 @@ body {
 .social-icons a {
     text-decoration: none;
     font-size: 24px;
-    color: #000; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
 .social-icons a:hover {
-    color: #007bff; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
 .back-to-top {
     display: block;
     margin: 20px 0;
     text-decoration: none;
-    color: black; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
 
+/* Media Queries para hacerlo responsive */
+@media (max-width: 991px) {
+    .main-content {
+        grid-template-columns: 1fr;
+    }
+
+    .about-section {
+        grid-column: 1 / -1;
+    }
+
+    .story-section {
+        grid-column: 1 / -1; 
+    }
+
+    .about-section img, 
+    .story-section img {
+        width: 100%; 
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .nav-links {
+        flex-direction: column;
+    }
+
+    .nav-links li {
+        margin-bottom: 10px;
+    }
+
+    .hero-section {
+        padding: 0 10px;
+    }
+
+    .footer {
+        padding: 15px;
+    }
+}
