--- a/assets/css/styleDonate.css
+++ b/assets/css/styleDonate.css
@@ -1,11 +1,10 @@
-/*Nabvar no responsive*/
 /* Estilos generales */
 html, body {
     margin: 0;
     padding: 0;
     width: 100%;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #FCF4EA !important;
 }
 
 /* Navbar */
@@ -37,7 +36,7 @@ html, body {
 }
 
 .nav-links a {
-    color: black; /* Cambiar color de fondo a transparente */
+    color: black; 
     text-decoration: none;
     font-size: 1.2rem;
 }
@@ -67,51 +66,47 @@ html, body {
 
 /* Tarjeta personalizada */
 .tarjeta-custom {
-    background-color: #e0e0e0; /* Cambia el color de fondo aquí */
+    background-color: #e0e0e0; 
 }
 
 .form-label {
-    font-weight: bold; /* Cambia el color de fondo aquí */
+    font-weight: bold; 
 }
 
-/* Footer */
+/*footer*/
 .footer {
-    background-color: #f2f2f2; /* Cambia este color según lo que prefieras */
+    background-color: #c6ac8f; 
     padding: 20px;
     text-align: center;
     width: 100%;
     box-sizing: border-box;
     margin: 0;
 }
-
 .footer h3 {
     margin-top: 0;
+    color: white;
 }
-
 .footer p {
     margin: 10px 0;
+    color: white;
 }
-
 .social-icons {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin: 20px 0;
 }
-
 .social-icons a {
     text-decoration: none;
     font-size: 24px;
-    color: #000; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
-
 .social-icons a:hover {
-    color: #007bff; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
-
 .back-to-top {
     display: block;
     margin: 20px 0;
     text-decoration: none;
-    color: black; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
