--- a/assets/css/styleLife.css
+++ b/assets/css/styleLife.css
@@ -1,4 +1,3 @@
-/*Navbar no responsive*/
 /* Estilos generales */
 body {
     display: flex;
@@ -7,7 +6,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #FCF4EA !important;
 }
 
 /* Navbar */
@@ -39,7 +38,7 @@ body {
 }
 
 .nav-links a {
-    color: black; /* Cambiar color de fondo a transparente */
+    color: black; 
     text-decoration: none;
     font-size: 1.2rem;
 }
@@ -65,13 +64,13 @@ body {
 /**cards format*/
 .card-img-top {
     width: 100%;
-    height: 500px; /* Ajusta la altura según tus necesidades */
-    object-fit: cover; /* Escala la imagen y corta los bordes si es necesario */
+    height: 500px; 
+    object-fit: cover; 
 }
 
 /*footer*/
 .footer {
-    background-color: #f2f2f2; /* Cambia este color según lo que prefieras */
+    background-color: #c6ac8f; 
     padding: 20px;
     text-align: center;
     width: 100%;
@@ -80,9 +79,11 @@ body {
 }
 .footer h3 {
     margin-top: 0;
+    color: white;
 }
 .footer p {
     margin: 10px 0;
+    color: white;
 }
 .social-icons {
     display: flex;
@@ -93,15 +94,14 @@ body {
 .social-icons a {
     text-decoration: none;
     font-size: 24px;
-    color: #000; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
 .social-icons a:hover {
-    color: #007bff; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
 .back-to-top {
     display: block;
     margin: 20px 0;
     text-decoration: none;
-    color: black; /* Cambia este color según lo que prefieras */
+    color: white; 
 }
-
